@@ -174,6 +174,7 @@ Chronological list of authors
 2022
   - Atharva Kulkarni
   - Yantong Cai
+  - Bjarne Feddersen
 
 External code
 -------------
