@@ -265,7 +265,8 @@ class TestITPNoKeywords(BaseITP):
     guessed_attrs = ['masses']
 
     expected_n_bonds = 2
-    expected_n_angles = 1
+    # FLEXIBLE not set -> SETTLE constraint -> water has no angle
+    expected_n_angles = 0
     expected_n_dihedrals = 0
     expected_n_impropers = 0
 
@@ -278,9 +279,6 @@ class TestITPNoKeywords(BaseITP):
         for b in [(0, 1), (0, 2)]:
             assert b in vals
 
-    def test_angles_values(self, top):
-        assert (1, 0, 2) in top.angles.values
-
     def test_defines(self, top):
         assert_allclose(top.charges.values[1], 0.241)
         assert_allclose(top.charges.values[2], 0.241)
@@ -292,6 +290,8 @@ class TestITPKeywords(TestITPNoKeywords):
     """
 
     expected_n_atoms = 7
+    # FLEXIBLE is set -> no SETTLE constraint -> water should have angle
+    expected_n_angles = 1
 
     @pytest.fixture
     def universe(self, filename):
@@ -307,6 +307,9 @@ class TestITPKeywords(TestITPNoKeywords):
     def test_whether_settles_types(self, universe):
         for param in list(universe.bonds) + list(universe.angles):
             assert param.type == 1
+
+    def test_angles_values(self, top):
+        assert (1, 0, 2) in top.angles.values
 
     def test_defines(self, top):
         assert_allclose(top.charges.values[1], 1)
@@ -325,7 +328,7 @@ class TestNestedIfs(BaseITP):
     expected_n_segments = 1
 
     expected_n_bonds = 2
-    expected_n_angles = 1
+    expected_n_angles = 0
     expected_n_dihedrals = 0
     expected_n_impropers = 0
 
@@ -354,7 +357,7 @@ class TestReadTop(BaseITP):
     expected_n_segments = 5
 
     expected_n_bonds = 130
-    expected_n_angles = 185
+    expected_n_angles = 182
     expected_n_dihedrals = 60
     expected_n_impropers = 58
 
